--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,15 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons">
-
+  <meta property="og:title" content="빙고제작소" />
+  <meta property="og:url" content="https://bingomill.web.app/" />
+  <meta property="og:description" content="빙고를 제작하고 공유 해봅시다!" />
+  <meta property="og:type" content="website" />
+  <meta name="title" content="빙고제작소(bingomill)" />
+  <meta name="subject" content="빠르게 제작하고 공유하는 빙고" />
+  <meta name="description" content="빙고를 제작하고 공유 해봅시다!" />
+  <meta name="author" content="taeminida@gmail.com" />
+  <meta name="keywords" content="빙고, 빙고만들기, 빙고제작, 빙고제작소, bingo, bingomill, 빨리만드는빙고, 빙고사이트" />
 </head>
 
 <body>
